# USIAgent

./: .gitignore  .project  Cargo.toml  README.md  setenv.bat
docs/: aliases.js  crates.js  index.md  search-index.js  settings.html  source-files.js
docs/src/usiagent/: command.rs.html  error.rs.html  event.rs.html  hash.rs.html  input.rs.html  (+10 more)
docs/usiagent/: all.html  enum.OnAcceptMove.html  index.html  sidebar-items.js  struct.OnErrorHandler.html  struct.SandBox.html  struct.UsiAgent.html  trait.Find.html  trait.MaxIndex.html  trait.TryFrom.html
src/: bitboard.rs  bits.rs  command.rs  cpu.rs  error.rs  event.rs  hash.rs  input.rs  interpreter.rs  lib.rs  logger.rs  math.rs  movepick.rs  output.rs  player.rs  protocol.rs  rule.rs  selfmatch.rs  shogi.rs  string.rs
src/usiagent/: command.rs  commands.rs  error.rs  errors.rs  event.rs  events.rs  input.rs  interpreter.rs  logger.rs  mod.rs  output.rs  player.rs  shogi.rs
tests/: lib.rs  rule.rs  shogi.rs
tests/agent/: mod.rs
tests/common/: mod.rs
tests/event/: mod.rs
tests/hash/: mod.rs
tests/player/: mod.rs
tests/protocol/: mod.rs
tests/rule/: apply_move.rs  control.rs  is_mate.rs  is_nyugyoku_win.rs  is_oute_move.rs  is_possible_nari.rs  is_put_fu_and_mate.rs  is_valid_move.rs  is_win.rs  legal_moves.rs  mod.rs  oute_only_moves.rs  perft.rs  position.rs  respond_oute_only_moves.rs  responded_oute.rs  sennichite.rs  validate.rs  win_only_moves.rs
tests/selfmatch/: error.rs  flip_players.rs  initial_position_creator.rs  kifuwriter.rs  mod.rs  periodically_info.rs  quit.rs
tests/shogi/: mod.rs
(+171 files in other folders)
