[package]
name = "usiagent"
version = "0.6.9"
authors = ["jinpu <nanasi18@gmail.com>"]
description = "USIAgent is a framework for Shogi AI development that supports the usi protocol."
documentation = "https://docs.rs/USIAgent"
homepage = "https://crates.io/crates/USIAgent"
repository = "https://github.com/j6k1/USIAgent"

readme = "README.md"

keywords = ["shogi","shogiai","usi-protocol"]
categories = []
license = "MIT"

[dependencies]
chrono = "0.4"
rand = "0.8.5"
rand_xorshift = "0.3.0"
rand_distr = "0.4.3"
crossbeam-channel = "0.5.6"
queuingtask = "0.1.0"
